@@ -1,3 +1,15 @@
+2008-04-24  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
+
+        Reviewed by Geoffrey Garen.
+
+        Bug 18716: SQUIRRELFISH: typeof should return undefined for an undefined variable reference
+        <https://bugs.webkit.org/show_bug.cgi?id=18716>
+
+        This fixes 2 more regression tests.
+
+        * kjs/nodes.cpp:
+        (KJS::TypeOfResolveNode::emitCode):
+
 2008-04-24  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Sam Weinig.
